# portfolio

./: .gitignore  README.rst  pyproject.toml
portfolio/: .gitignore
portfolio/FullstackOpen/: READMEcopy.md
portfolio/Ouradata/: READMEcopy.rst  tomlcopy.md
portfolio/Pikakoodit/: README.md  tomlcopy.md
portfolio/SQLcodeSnippets_text/: README.md  pleaseSELECTTuire.text
portfolio/Testi/: READMEcopy.md
portfolio/jupyter_kurssi_ja_omakertausta/: README.md
portfolio/mokkiappitesteja/: READMEcopy.md
portfolio/robottipeliharjoitus/: readme.md
tests/: test_luokkaPortfoliokelpoinen.py  testifunktio.py
