[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "ReadMe-Fileitä kootusti eri repoista ja muuta mahdollisesti portfolion pohjaksi sopivaa."
authors = ["Eriuth <tuire.ahola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
